// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextPlaceholder should be rendered correctly 1`] = `
<div
  className="container"
>
  <span
    className="loadingWord text-placeholder-color-gray40 animatedLoading"
    dangerouslySetInnerHTML={
      Object {
        "__html": "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
      }
    }
  />
</div>
`;

exports[`TextPlaceholder should be rendered correctly 2`] = `
<div
  className="container"
>
  <span
    className="loadingWord text-placeholder-color-gray40"
    dangerouslySetInnerHTML={
      Object {
        "__html": "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
      }
    }
  />
  <span
    className="loadingWord text-placeholder-color-gray40"
    dangerouslySetInnerHTML={
      Object {
        "__html": "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
      }
    }
  />
  <span
    className="loadingWord text-placeholder-color-gray40"
    dangerouslySetInnerHTML={
      Object {
        "__html": "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
      }
    }
  />
  <span
    className="loadingWord text-placeholder-color-gray40"
    dangerouslySetInnerHTML={
      Object {
        "__html": "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
      }
    }
  />
  <span
    className="loadingWord text-placeholder-color-gray40"
    dangerouslySetInnerHTML={
      Object {
        "__html": "&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;",
      }
    }
  />
</div>
`;
